src/styles/components/footer.scss
footer {
  margin-top:10px;

  .main-footer {
    padding:50px 0;
    background:$footer-bg; // $footer-bg

    .footer-blocks {
      font-family:$base-font-family;
      display:flex;
      flex-direction: row;
      flex-wrap: nowrap;

      border-bottom: 1px solid #828998;


      .footer-block.img-block {
        width:30%;
        padding:0;
        border-right:1px solid $footer-link-color;
       // margin-left:-50px;
      }

      .footer-block {
        padding:20px;

        width:16%;

        .block-title {
          color:#fff;
          font-size:16px;
          font-weight: bold;
        }

        .separator {
          height:2px;
          width:30%;
          background: $primary;
          display:block;
          margin-bottom: 10px;
        }

        .links {
          a { color:$footer-link-color; font-size:14px; }
        }


      }

    }

    .risk-warning-box {
      font-family: $base-font-family;
      font-size:12px;
      margin-top:20px;
      color:$footer-link-color;
      .risk-warning {
        font-weight: bold;
      }
    }

  }

  .bar {
    background:$primary;
    height:87px;
  }

  .footer-bottom {
    padding:20px;
    background: $footer-bottom;

    .contact-info {
      font-family: $base-font-family;
      fonts-size:12px;
      margin-top:10px;
      color:$footer-link-color;

      li {
        display: inline-block;
        padding:0 5px;
        font-size:12px;
      }

      .text {
        display:inline-block;
        margin-top:-10px;
      }

      .icon-separator {
        display:inline-block;
        width:50px;
        border-right:1px solid $footer-link-color;
        margin-right: 10px;
        text-align: center;
      }

      .contact-icon {
        font-size:18px;
        color:$primary;
      }
    }

    .social-links {
      a {
        display:inline-block;
        padding:0 20px;
        font-size:25px;
      }
    }

  }

}

